WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290806
apple-visual-effects/apple-visual-effect-parsing.html is a constant text failure when hosted materials are enabled
https://bugs.webkit.org/show_bug.cgi?id=290806
Summary
apple-visual-effects/apple-visual-effect-parsing.html is a constant text fail...
Aditya Keerthi
Reported
2025-03-31 16:08:52 PDT
rdar://148125924
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-03-31 16:12:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43353
EWS
Comment 2
2025-03-31 19:11:55 PDT
Committed
292990@main
(a19e213131c9): <
https://commits.webkit.org/292990@main
> Reviewed commits have been landed. Closing PR #43353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug