apple-visual-effects/apple-visual-effect-parsing.html is a constant text failure when hosted materials are enabled https://bugs.webkit.org/show_bug.cgi?id=290806 rdar://148125924

Reviewed by Abrar Rahman Protyasha.

* Source/WebCore/rendering/style/StyleRareNonInheritedData.h:

When hosted materials are enabled, there are more than 16 visual effect values.
Update the number of bits used to encode the visual effect.

This does not increase the size of `StyleRareNonInheritedData`, as there are
currently 4 free bits.

Canonical link: https://commits.webkit.org/292990@main